...

            <Button
                android:id="@+id/btn_rock"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_jazz"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_classical"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_hip_hop"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_country"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_action"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_comedy"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_sci_fi"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_thriller"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_horror"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_technology"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_health"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_sports"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_business"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_education"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_gym"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_park"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_cafe"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_library"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...

            <Button
                android:id="@+id/btn_mall"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
...
